docs(jpms): record verified module-graph resolution, drop obsolete build-compatible-ext caveat
- build-compatible-ext is split-free with core since #254 and resolves next to it on a strict
  module path (verified); keep it out of the jlink set only because Quarkus/Helidon use the class path
- document the JDK 21 boot-layer resolution check of all first-party roots + patched jars,
  and the jakarta.cdi.lang.model requirement of jakarta.cdi
- recommend 'clean verify' for the jlink-vidocq profile (target/modules is not purged)

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0133VwooJowUJM1pyXf8VTKv

Signed-off-by: Yann Blazart <yann@durand-blazart.fr>